--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -97,7 +97,7 @@ DependencyProperties_add_directory = Add directory
 
 DependencyProperties_add_file = Add file
 
-DependencyProperties_add_uri = Add URI
+DependencyProperties_add_uri = Add URL
 
 DependencyProperties_connection_start = Database connection string must start with 'jdbc:'
 
@@ -105,7 +105,7 @@ DependencyProperties_empty_scheme = Empty scheme unsupported
 
 DependencyProperties_enter_connection_string = Enter database connection string
 
-DependencyProperties_enter_uri = Enter URI
+DependencyProperties_enter_uri = Enter URL
 
 DependencyProperties_ignore_privileges = Ignore privileges
 
@@ -179,7 +179,7 @@ DiffTableViewer_to_project = Project
 
 DiffTableViewer_type = Type: 
 
-DiffTableViewer_uri = URI
+DiffTableViewer_uri = URL
 
 DiffTableViewer_user = Git user
 
