--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
@@ -98,7 +98,7 @@ DependencyProperties_add_directory = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\
 
 DependencyProperties_add_file = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u0444\u0430\u0439\u043B
 
-DependencyProperties_add_uri = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C URI
+DependencyProperties_add_uri = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C URL
 
 DependencyProperties_connection_start = \u0421\u0442\u0440\u043E\u043A\u0430 \u043F\u043E\u0434\u043A\u043B\u044E\u0447\u0435\u043D\u0438\u044F \u043A \u0431\u0430\u0437\u0435 \u0434\u0430\u043D\u043D\u044B\u0445 \u0434\u043E\u043B\u0436\u043D\u0430 \u043D\u0430\u0447\u0438\u043D\u0430\u0442\u044C\u0441\u044F \u0441 'jdbc:'
 
@@ -106,7 +106,7 @@ DependencyProperties_empty_scheme = \u041F\u0443\u0441\u0442\u0430\u044F \u0441\
 
 DependencyProperties_enter_connection_string = \u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u0441\u0442\u0440\u043E\u043A\u0443 \u043F\u043E\u0434\u043A\u043B\u044E\u0447\u0435\u043D\u0438\u044F \u043A \u0431\u0430\u0437\u0435 \u0434\u0430\u043D\u043D\u044B\u0445
 
-DependencyProperties_enter_uri = \u0412\u0432\u0435\u0434\u0438\u0442\u0435 URI
+DependencyProperties_enter_uri = \u0412\u0432\u0435\u0434\u0438\u0442\u0435 URL
 
 DependencyProperties_ignore_privileges = \u0418\u0433\u043D\u043E\u0440\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u043F\u0440\u0438\u0432\u0438\u043B\u0435\u0433\u0438\u0438
 
@@ -180,7 +180,7 @@ DiffTableViewer_to_project = \u041F\u0440\u043E\u0435\u043A\u0442\u0443
 
 DiffTableViewer_type = \u0422\u0438\u043F: 
 
-DiffTableViewer_uri = URI
+DiffTableViewer_uri = URL
 
 DiffTableViewer_user = \u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C git
 
