added special folder for privileges
LibraryLoader: fixed jdbc reading for MS SQL
AbstractModelExporter: new file API
ModelExporter: fixed VIEW export
DiffTableViewer: fixed jdbc lib and git path for MS SQL

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -1,6 +1,10 @@
 
 CodeFilter_search_by_code = Filter by object's SQL code:
 
+CommitDialog_privileges_must_be_saved = Some objects privileges must be saved to special folder
+
+CommitDialog_save_privileges = Save privileges to special folder (object will not be modified)
+
 CommitDialog_unchecked_objects_can_occur_unexpected_errors = Unchecked objects may cause errors or unexpected behavior!
 
 ConsoleFactory_error_opening_console = Cannot activate a console
@@ -521,9 +525,9 @@ ProjectEditorDiffer_error_refreshing_project = Error while refreshing project in
 
 ProjectEditorDiffer_failed_egit_commit = Could not execute EGit commit for applied changes!
 
-ProjectEditorDiffer_lib_change_error_message = Modifying library objects would create overriding copies. This is not allowed by project library settings.
+ProjectEditorDiffer_lib_change_error_message = Modifying library objects would create overriding copies. This is not allowed by project library settings, but you can save library privileges to special folder. Continue?
 
-ProjectEditorDiffer_lib_change_warning_message = Some of selected objects are library objects. Deleting these objects will have no effect. Instead of modifying them local project copies will be created. Continue?
+ProjectEditorDiffer_lib_change_warning_message = Some of selected objects are library objects. Deleting these objects will have no effect. Instead of modifying them local project copies will be created. Privileges of objects can be saved in a special folder. Continue?
 
 ProjectEditorDiffer_lib_change_warning_title = Library object change
 
