fixed state check, l10n

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -1,7 +1,7 @@
 
 CodeFilter_search_by_code = Filter by object's SQL code:
 
-CommitDialog_privileges_must_be_saved = Only privilege overrides can be saved due to library object modification!
+CommitDialog_privileges_must_be_saved = Only privilege and owners of database objects overrides can be saved due to library object modification!
 
 CommitDialog_save_privileges = Save privilege overrides separately (objects will not be updated)
 
@@ -525,9 +525,9 @@ ProjectEditorDiffer_error_refreshing_project = Error while refreshing project in
 
 ProjectEditorDiffer_failed_egit_commit = Could not execute EGit commit for applied changes!
 
-ProjectEditorDiffer_lib_change_error_message = Modifying library objects would create overriding copies. This is not allowed by project library settings, but you can save privilege overrides separately. Continue?
+ProjectEditorDiffer_lib_change_error_message = Modifying library objects would create overriding copies. This is not allowed by project library settings, but you can save privilege and owners of database objects overrides separately. Continue?
 
-ProjectEditorDiffer_lib_change_warning_message = Some of selected objects are library objects. Deleting these objects will have no effect. Instead of modifying them local project copies will be created. Privilege overrides can be saved separately. Continue?
+ProjectEditorDiffer_lib_change_warning_message = Some of selected objects are library objects. Deleting these objects will have no effect. Instead of modifying them local project copies will be created. Privilege and owners of database objects overrides can be saved separately. Continue?
 
 ProjectEditorDiffer_lib_change_warning_title = Library object change
 
