added library owner

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -112,6 +112,7 @@ DependencyProperties_enter_connection_string = Enter database connection string
 DependencyProperties_enter_uri = Enter URL
 
 DependencyProperties_ignore_privileges = Ignore privileges
+DependencyProperties_owner=Owner
 
 DependencyProperties_path = Path
 
