--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
@@ -114,6 +114,8 @@ DependencyProperties_enter_uri = \u0412\u0432\u0435\u0434\u0438\u0442\u0435 URL
 
 DependencyProperties_ignore_privileges = \u0418\u0433\u043D\u043E\u0440\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u043F\u0440\u0438\u0432\u0438\u043B\u0435\u0433\u0438\u0438
 
+DependencyProperties_owner = \u0412\u043B\u0430\u0434\u0435\u043B\u0435\u0446
+
 DependencyProperties_path = \u041F\u0443\u0442\u044C
 
 DependencyProperties_safe_mode = \u0417\u0430\u043F\u0440\u0435\u0442\u0438\u0442\u044C \u043F\u0435\u0440\u0435\u043E\u043F\u0440\u0435\u0434\u0435\u043B\u0435\u043D\u0438\u0435
