--- a/apgdiff/src/main/java/ru/taximaxim/codekeeper/apgdiff/localizations/messages.properties
+++ b/apgdiff/src/main/java/ru/taximaxim/codekeeper/apgdiff/localizations/messages.properties
@@ -9,6 +9,8 @@ Connection_JdbcDriverClassNotFound = JDBC driver class not found. Error: {0}
 # Database
 JdbcConnector_in_jdbc_connection = JDBC connection
 
+PgDumpLoader_ProjReadingError = Error while reading database schema from project, error occured while processing {1}\n{0}
+
 # Storage
 Storage_WarningUnableToDetermineStorageType = -- WARNING: Column {0}.{1} in new table has no STORAGE set but in old table storage was set. Unable to determine STORAGE type.
 
@@ -16,6 +18,9 @@ Storage_WarningUnableToDetermineStorageType = -- WARNING: Column {0}.{1} in new 
 Table_TypeParameterChange = TYPE change - table: {0} original: {1} new: {2}
 
 UnknownDBFormat = Unknown DB format: {0}
-XmlStore_read_error=Error while reading history XML: {0}
-XmlStore_root_error=XML root element name is not as requested
-XmlStore_write_error=Error while writing history XML: {0}
+
+XmlStore_read_error = Error while reading history XML: {0}
+
+XmlStore_root_error = XML root element name is not as requested
+
+XmlStore_write_error = Error while writing history XML: {0}
