--- a/apgdiff/src/main/java/ru/taximaxim/codekeeper/apgdiff/localizations/messages_ru_RU.properties
+++ b/apgdiff/src/main/java/ru/taximaxim/codekeeper/apgdiff/localizations/messages_ru_RU.properties
@@ -7,6 +7,8 @@ Connection_JdbcDriverClassNotFound = \u041A\u043B\u0430\u0441\u0441 JDBC \u0434\
 
 JdbcConnector_in_jdbc_connection = JDBC \u043F\u043E\u0434\u043A\u043B\u044E\u0447\u0435\u043D\u0438\u044F
 
+PgDumpLoader_ProjReadingError = \u041E\u0448\u0438\u0431\u043A\u0430 \u043F\u0440\u0438 \u0447\u0442\u0435\u043D\u0438\u0438 \u0441\u0445\u0435\u043C\u044B \u0411\u0414 \u0438\u0437 \u043F\u0440\u043E\u0435\u043A\u0442\u0430, \u043E\u0448\u0438\u0431\u043A\u0430 \u043F\u0440\u043E\u0438\u0437\u043E\u0448\u043B\u0430 \u043F\u0440\u0438 \u043E\u0431\u0440\u0430\u0431\u043E\u0442\u043A\u0435 {1}\n{0}
+
 Storage_WarningUnableToDetermineStorageType = -- WARNING: Column {0}.{1} in new table has no STORAGE set but in old table storage was set. Unable to determine STORAGE type.
 
 # Table
