fixed incorrect working the threads with 'antlrTasks' queue
made getting the queue of "antlrTasks" from the outside and made
'finishAntlr' wait the parsing of all files before finalizer starts

LibraryLoader, ProjectLoader, UIProjectLoader : added TODO-information

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -112,7 +112,8 @@ DependencyProperties_enter_connection_string = Enter database connection string
 DependencyProperties_enter_uri = Enter URL
 
 DependencyProperties_ignore_privileges = Ignore privileges
-DependencyProperties_owner=Owner
+
+DependencyProperties_owner = Owner
 
 DependencyProperties_path = Path
 
@@ -443,6 +444,8 @@ OpenProjectUtils_update_warning = Project ''{0}'' contains legacy schema files.\
 OpenProjectUtils_updating_project = Updating project
 
 OpenProjectUtils_version_error = Version Error
+
+PgDbParser_ProjReadingError = Error while reading database schema from project, error occured while processing {1}\n{0}
 
 PgDbParser_error_loading_db = Error loading database
 
