changed label for black/white lists

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -283,7 +283,9 @@ IgnoreListProperties_create_new_file = Create new file
 
 IgnoredObjectPrefListEditor_already_present = Entry "{0}" is already present in the list with given parameters!
 
-IgnoredObjectPrefListEditor_contents = Ignore contents
+IgnoredObjectPrefListEditor_contents_ignore_list = Ignore contents
+
+IgnoredObjectPrefListEditor_contents_white_list = Allow all contents
 
 IgnoredObjectPrefListEditor_enter_name = Enter object name.
 
