added prototype data extraction mechanism

--- a/ru.taximaxim.codekeeper.ui/OSGI-INF/l10n/bundle.properties
+++ b/ru.taximaxim.codekeeper.ui/OSGI-INF/l10n/bundle.properties
@@ -88,6 +88,7 @@ templates.name.sqlEditor = SQL Editor Templates
 view.category.name            = pgCodeKeeper Views
 view.name.DepcyView           = pg Dependencies
 view.name.ProjectOverrideView = Object overrides
+view.name.ResultSetView       = Query result
 
 wizard.name.keeperImportWizard = pgCodeKeeper Project
 wizard.name.keeperNewMsWizard  = pgCodeKeeper MS SQL Project
