Changed names: table column, dialog box and check box

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
@@ -284,13 +284,11 @@ IgnoreListProperties_create_new_file = \u0421\u043E\u0437\u0434\u0430\u0442\u044
 
 IgnoredObjectPrefListEditor_already_present = \u0417\u0430\u043F\u0438\u0441\u044C "{0}" \u0443\u0436\u0435 \u043F\u0440\u0438\u0441\u0443\u0442\u0441\u0442\u0432\u0443\u0435\u0442 \u0432 \u0441\u043F\u0438\u0441\u043A\u0435 \u0441 \u0434\u0430\u043D\u043D\u044B\u043C\u0438 \u043F\u0430\u0440\u0430\u043C\u0435\u0442\u0440\u0430\u043C\u0438!
 
-IgnoredObjectPrefListEditor_contents_ignore_list = \u0418\u0433\u043D\u043E\u0440\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u0441\u043E\u0434\u0435\u0440\u0436\u0438\u043C\u043E\u0435
-
-IgnoredObjectPrefListEditor_contents_white_list = \u0420\u0430\u0437\u0440\u0435\u0448\u0438\u0442\u044C \u0432\u0441\u0435 \u0441\u043E\u0434\u0435\u0440\u0436\u0438\u043C\u043E\u0435
+IgnoredObjectPrefListEditor_contents_ignore = \u041F\u0440\u0438\u043C\u0435\u043D\u0438\u0442\u044C \u043A \u0441\u043E\u0434\u0435\u0440\u0436\u0438\u043C\u043E\u043C\u0443
 
 IgnoredObjectPrefListEditor_enter_name = \u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u0438\u043C\u044F \u043E\u0431\u044A\u0435\u043A\u0442\u0430.
 
-IgnoredObjectPrefListEditor_new_ignored = \u041D\u043E\u0432\u044B\u0439 \u0438\u0433\u043D\u043E\u0440\u0438\u0440\u0443\u0435\u043C\u044B\u0439 \u043E\u0431\u044A\u0435\u043A\u0442
+IgnoredObjectPrefListEditor_new_ignored = \u041D\u043E\u0432\u043E\u0435 \u043F\u0440\u0430\u0432\u0438\u043B\u043E...
 
 IgnoredObjectPrefListEditor_object_name = \u0418\u043C\u044F \u043E\u0431\u044A\u0435\u043A\u0442\u0430:
 
@@ -925,7 +923,7 @@ generalPrefPage_show_console_when_program_write_to_console = \u041F\u043E\u043A\
 
 generalPrefPage_use_depcy_on_commit_page = \u0423\u0447\u0438\u0442\u044B\u0432\u0430\u0442\u044C \u0437\u0430\u0432\u0438\u0441\u0438\u043C\u043E\u0441\u0442\u0438 \u043E\u0431\u044A\u0435\u043A\u0442\u043E\u0432 \u043F\u0440\u0438 \u043E\u0431\u043D\u043E\u0432\u043B\u0435\u043D\u0438\u0438 \u043F\u0440\u043E\u0435\u043A\u0442\u0430
 
-ignoredObjectPrefListEditor_ignore_contents = \u0418\u0433\u043D\u043E\u0440\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u0441\u043E\u0434\u0435\u0440\u0436\u0438\u043C\u043E\u0435
+ignoredObjectPrefListEditor_ignore_contents = \u041F\u0440\u0438\u043C\u0435\u043D\u0438\u0442\u044C \u043A \u0441\u043E\u0434\u0435\u0440\u0436\u0438\u043C\u043E\u043C\u0443
 
 ignoredObjectPrefListEditor_name = \u0422\u0435\u043A\u0441\u0442
 
