--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -283,13 +283,11 @@ IgnoreListProperties_create_new_file = Create new file
 
 IgnoredObjectPrefListEditor_already_present = Entry "{0}" is already present in the list with given parameters!
 
-IgnoredObjectPrefListEditor_contents_ignore_list = Ignore contents
-
-IgnoredObjectPrefListEditor_contents_white_list = Allow all contents
+IgnoredObjectPrefListEditor_contents_ignore = Apply to contents
 
 IgnoredObjectPrefListEditor_enter_name = Enter object name.
 
-IgnoredObjectPrefListEditor_new_ignored = New ignored object...
+IgnoredObjectPrefListEditor_new_ignored = New rule...
 
 IgnoredObjectPrefListEditor_object_name = Object Name:
 
@@ -924,7 +922,7 @@ generalPrefPage_show_console_when_program_write_to_console = Show console on new
 
 generalPrefPage_use_depcy_on_commit_page = Consider object dependencies when updating project
 
-ignoredObjectPrefListEditor_ignore_contents = Ignore Contents
+ignoredObjectPrefListEditor_ignore_contents = Apply to contents
 
 ignoredObjectPrefListEditor_name = Text
 
