moved dump to db local properties

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -37,6 +37,18 @@ DbStoreEditorDialog_connect_to_ms = connect to MS SQL Server
 
 DbStoreEditorDialog_connection_properties = Connection properties
 
+DbStoreEditorDialog_dump_custom_parameters = dump custom parameters\n(available variables: {0} {1} {2} {3} {4}):
+
+DbStoreEditorDialog_dump_executable = dump executable
+
+DbStoreEditorDialog_dump_file_dialog_header = Select dump file
+
+DbStoreEditorDialog_dump_filter = All files
+
+DbStoreEditorDialog_dump_properties = External loader
+
+DbStoreEditorDialog_dump_switch = Use dump DB loader instead of JDBC
+
 DbStoreEditorDialog_failed_connection = Connection failed
 
 DbStoreEditorDialog_failed_connection_reason = Connection to database failed. Reason: 
@@ -911,12 +923,6 @@ executableFileFieldEditor_value_must_be_file_with_execute_permission_set = Selec
 feedback_message = Message:
 
 generalPrefPage_perspective_changing_status = Switch to pgCodeKeeper perspective when opening editor
-
-generalPrefPage_pg_dump_custom_parameters = pg_dump custom parameters
-
-generalPrefPage_pg_dump_executable = pg_dump executable
-
-generalPrefPage_pg_dump_switch = Use pg_dump DB loader instead of JDBC
 
 generalPrefPage_show_console_when_program_write_to_console = Show console on new output
 
