--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -149,8 +149,6 @@ DiffTableViewer_copy_as_regex = Copy Checked Elements as Filter Regex
 
 DiffTableViewer_database = Database
 
-DiffTableViewer_db_user = Database user
-
 DiffTableViewer_directory = Directory
 
 DiffTableViewer_error_reading_git_history = Error reading git history
@@ -833,7 +831,11 @@ diffTableViewer_change_type = Change Type
 
 diffTableViewer_container = Container
 
+diffTableViewer_db_user = Database user
+
 diffTableViewer_deselect_child_elements = Deselect Child Elements
+
+diffTableViewer_git_user = Git user
 
 diffTableViewer_invert_selection = Invert Selection
 
