--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
@@ -150,8 +150,6 @@ DiffTableViewer_copy_as_regex = \u041A\u043E\u043F\u0438\u0440\u043E\u0432\u0430
 
 DiffTableViewer_database = \u0411\u0430\u0437\u0430 \u0434\u0430\u043D\u043D\u044B\u0445
 
-DiffTableViewer_db_user = \u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C \u0411\u0414
-
 DiffTableViewer_directory = \u0414\u0438\u0440\u0435\u043A\u0442\u043E\u0440\u0438\u044F
 
 DiffTableViewer_error_reading_git_history = \u041E\u0448\u0438\u0431\u043A\u0430 \u043F\u0440\u0438 \u0447\u0442\u0435\u043D\u0438\u0438 \u0438\u0441\u0442\u043E\u0440\u0438\u0438 git
@@ -834,7 +832,11 @@ diffTableViewer_change_type = \u0422\u0438\u043F \u0438\u0437\u043C\u0435\u043D\
 
 diffTableViewer_container = \u041A\u043E\u043D\u0442\u0435\u0439\u043D\u0435\u0440
 
+diffTableViewer_db_user = \u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C \u0411\u0414
+
 diffTableViewer_deselect_child_elements = \u0421\u043D\u044F\u0442\u044C \u0432\u044B\u0431\u043E\u0440 \u0441 \u0434\u043E\u0447\u0435\u0440\u043D\u0438\u0445 \u044D\u043B\u0435\u043C\u0435\u043D\u0442\u043E\u0432
+
+diffTableViewer_git_user = Git \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C
 
 diffTableViewer_invert_selection = \u0418\u043D\u0432\u0435\u0440\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u0432\u044B\u0431\u043E\u0440
 
