--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -375,6 +375,8 @@ NewObjectWizard_invalid_input_format = Invalid input format. Expected format:
 
 NewObjectWizard_invalid_schema_format = Object of this type cannot be created within a schema
 
+NewProjWizard_binding_db_connection = Bind database connection to project
+
 NewProjWizard_cannot_delete_project = Couldn't revert workspace state.
 
 NewProjWizard_create_project = Create a new pgCodeKeeper project
