--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -253,7 +253,7 @@ FilterDialog_title = Filters
 
 GeneralPrefPage_extension_desc = Accelerated DB schema reading; Displaying DB user that made the change
 
-GeneralPrefPage_ignore_concurrent_modification = Ignore concurrent modification errors
+GeneralPrefPage_ignore_concurrent_modification = Ignore concurrent modification errors when reading DB
 
 GeneralPrefPage_reuse_open_compare_editor = Reuse compare editor instead of opening new ones
 
