added localization for button label 'browse' (browse of dump in dbstore)

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -37,6 +37,8 @@ DbStoreEditorDialog_connect_to_ms = connect to MS SQL Server
 
 DbStoreEditorDialog_connection_properties = Connection properties
 
+DbStoreEditorDialog_dump_browse = Browse...
+
 DbStoreEditorDialog_dump_custom_parameters = dump custom parameters\n(available variables: {0} {1} {2} {3} {4}):
 
 DbStoreEditorDialog_dump_executable = dump executable
