--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
@@ -38,6 +38,8 @@ DbStoreEditorDialog_connect_to_ms = \u043F\u043E\u0434\u043A\u043B\u044E\u0447\u
 
 DbStoreEditorDialog_connection_properties = \u0421\u0432\u043E\u0439\u0441\u0442\u0432\u0430 \u0441\u043E\u0435\u0434\u0438\u043D\u0435\u043D\u0438\u044F
 
+DbStoreEditorDialog_dump_browse = \u041E\u0431\u0437\u043E\u0440...
+
 DbStoreEditorDialog_dump_custom_parameters = \u0414\u043E\u043F\u043E\u043B\u043D\u0438\u0442\u0435\u043B\u044C\u043D\u044B\u0435 \u043F\u0430\u0440\u0430\u043C\u0435\u0442\u0440\u044B dump\n(\u0434\u043E\u0441\u0442\u0443\u043F\u043D\u044B\u0435 \u043F\u0435\u0440\u0435\u043C\u0435\u043D\u043D\u044B\u0435: {0} {1} {2} {3} {4}):
 
 DbStoreEditorDialog_dump_executable = \u0418\u0441\u043F\u043E\u043B\u043D\u044F\u0435\u043C\u044B\u0439 \u0444\u0430\u0439\u043B dump
