added tooltip to disabled DbCombo

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -29,6 +29,8 @@ DbPropertyListEditor_tbl_col_name = Name
 
 DbPropertyListEditor_tbl_col_value = Value
 
+DbStoreCombo_db_binding_property = Project binded to database. To detach it enter to the project properties pgCodeKeeper.
+
 DbStoreEditorDialog_auto_generation = Auto-generate
 
 DbStoreEditorDialog_auto_generation_description = The name of the entry will be generated based on connection parameters
