--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -379,8 +379,6 @@ NewObjectWizard_invalid_input_format = Invalid input format. Expected format:
 
 NewObjectWizard_invalid_schema_format = Object of this type cannot be created within a schema
 
-NewProjWizard_binding_db_connection = Bind database connection to project
-
 NewProjWizard_cannot_delete_project = Couldn't revert workspace state.
 
 NewProjWizard_create_project = Create a new pgCodeKeeper project
@@ -562,6 +560,8 @@ ProjectOverrideView_old_location = Library
 ProjectOverrideView_open_new_location = Open override
 
 ProjectOverrideView_open_old_location = Open library
+
+ProjectProperties_binding_to_db_connection = Bind project to database connection
 
 ProjectProperties_change_projprefs_warn = Warning:\nChanging settings here WILL NOT convert the files' contents!
 
