made corrections for 'RollOn'-hotkeys considering 'Project/DB' switcher

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -497,7 +497,13 @@ PgPassDialog_title = Pgpass sources list
 
 PrefListEditor_cannot_add = Cannot add item!
 
+ProjectEditorDiffer_changed_direction_of_roll_on = You changed the direction of roll. Now selected changes will roll to {0}.
+
+ProjectEditorDiffer_changed_direction_of_roll_on_title = Changed the direction of roll.
+
 ProjectEditorDiffer_commit_error = Error while saving changes
+
+ProjectEditorDiffer_database = Database
 
 ProjectEditorDiffer_different_types = Incompatible project and database types
 
