added changing the 'Change Type' column by switcher 'Project/DB'

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -827,13 +827,17 @@ delete = Delete
 
 diffPresentationPane_getting_changes_for_diff = Getting changes
 
-diffTableViewer_change_type = Change Type
+diffTableViewer_change_type = Change Type for {0}
 
 diffTableViewer_container = Container
 
 diffTableViewer_db_user = Database user
 
 diffTableViewer_deselect_child_elements = Deselect Child Elements
+
+diffTableViewer_for_database = database
+
+diffTableViewer_for_project = project
 
 diffTableViewer_git_user = Git user
 
