replaced wrong word 'binded' by 'bound' in methods and variables names

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -29,9 +29,9 @@ DbPropertyListEditor_tbl_col_name = Name
 
 DbPropertyListEditor_tbl_col_value = Value
 
-DbStoreCombo_db_binding_property = Project binded to database. To detach it enter to the project properties pgCodeKeeper and uncheck "Bind database connection to project".
+DbStoreCombo_db_binding_property = Project bound to database. To detach it enter to the project properties pgCodeKeeper and uncheck "Bind database connection to project".
 
-DbStoreCombo_db_binding_property_title = Project binded to database.
+DbStoreCombo_db_binding_property_title = Project bound to database.
 
 DbStoreEditorDialog_auto_generation = Auto-generate
 
