--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
@@ -142,7 +142,7 @@ DiffPresentationPane_sql_file_filter = \u0424\u0430\u0439\u043B\u044B SQL
 
 DiffPresentationPane_zip_file_filter = \u0424\u0430\u0439\u043B\u044B ZIP
 
-DiffTableViewer_apply_to = \u041F\u0440\u0438\u043C\u0435\u043D\u0438\u0442\u044C \u043A:
+DiffTableViewer_apply_to = \u041F\u0440\u0438\u043C\u0435\u043D\u0438\u0442\u044C
 
 DiffTableViewer_collapse_all = \u0421\u0432\u0435\u0440\u043D\u0443\u0442\u044C \u0432\u0441\u0435
 
@@ -176,9 +176,9 @@ DiffTableViewer_selected_count = \u0412\u044B\u0431\u0440\u0430\u043D\u043E \u04
 
 DiffTableViewer_show_filters = \u041F\u043E\u043A\u0430\u0437\u0430\u0442\u044C \u0444\u0438\u043B\u044C\u0442\u0440\u044B...
 
-DiffTableViewer_to_database = \u0411\u0430\u0437\u0435 \u0434\u0430\u043D\u043D\u044B\u0445
+DiffTableViewer_to_database = \u0411\u0414
 
-DiffTableViewer_to_project = \u041F\u0440\u043E\u0435\u043A\u0442\u0443
+DiffTableViewer_to_project = \u041A \u043F\u0440\u043E\u0435\u043A\u0442\u0443
 
 DiffTableViewer_type = \u0422\u0438\u043F: 
 
@@ -498,13 +498,13 @@ PgPassDialog_title = \u0421\u043F\u0438\u0441\u043E\u043A \u0438\u0441\u0442\u04
 
 PrefListEditor_cannot_add = \u041D\u0435\u0432\u043E\u0437\u043C\u043E\u0436\u043D\u043E \u0434\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u044D\u043B\u0435\u043C\u0435\u043D\u0442!
 
-ProjectEditorDiffer_changed_direction_of_roll_on = \u0412\u044B \u0438\u0437\u043C\u0435\u043D\u0438\u043B\u0438 \u043D\u0430\u043F\u0440\u0430\u0432\u043B\u0435\u043D\u0438\u0435 \u043D\u0430\u043A\u0430\u0442\u0430. \u0422\u0435\u043F\u0435\u0440\u044C \u0432\u044B\u0431\u0430\u0440\u043D\u043D\u044B\u0435 \u0438\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u044F \u043D\u0430\u043A\u0430\u0442\u044F\u0442\u0441\u044F \u043D\u0430 {0}.
+ProjectEditorDiffer_changed_direction_of_roll_on = \u0412\u044B \u0438\u0437\u043C\u0435\u043D\u0438\u043B\u0438 \u043D\u0430\u043F\u0440\u0430\u0432\u043B\u0435\u043D\u0438\u0435 \u043C\u0438\u0433\u0440\u0430\u0446\u0438\u0438. \u0422\u0435\u043F\u0435\u0440\u044C \u0432\u044B\u0431\u0440\u0430\u043D\u043D\u044B\u0435 \u0438\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u044F \u043F\u0440\u0438\u043C\u0435\u043D\u044F\u0442\u0441\u044F \u043A {0}.
 
-ProjectEditorDiffer_changed_direction_of_roll_on_title = \u0418\u0437\u043C\u0435\u043D\u0438\u043B\u043E\u0441\u044C \u043D\u0430\u043F\u0440\u0430\u0432\u043B\u0435\u043D\u0438\u0435 \u043D\u0430\u043A\u0430\u0442\u0430.
+ProjectEditorDiffer_changed_direction_of_roll_on_title = \u0418\u0437\u043C\u0435\u043D\u0438\u043B\u043E\u0441\u044C \u043D\u0430\u043F\u0440\u0430\u0432\u043B\u0435\u043D\u0438\u0435 \u043C\u0438\u0433\u0440\u0430\u0446\u0438\u0438
 
 ProjectEditorDiffer_commit_error = \u041E\u0448\u0438\u0431\u043A\u0430 \u043F\u0440\u0438 \u0441\u043E\u0445\u0440\u0430\u043D\u0435\u043D\u0438\u0438 \u0438\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u0439
 
-ProjectEditorDiffer_database = \u0411\u0430\u0437\u0443 \u0434\u0430\u043D\u043D\u044B\u0445
+ProjectEditorDiffer_database = \u0411\u0414
 
 ProjectEditorDiffer_different_types = \u041D\u0435\u0441\u043E\u0432\u043C\u0435\u0441\u0442\u0438\u043C\u044B\u0435 \u0442\u0438\u043F\u044B \u043F\u0440\u043E\u0435\u043A\u0442\u0430 \u0438 \u0431\u0430\u0437\u044B \u0434\u0430\u043D\u043D\u044B\u0445
 
@@ -530,7 +530,7 @@ ProjectEditorDiffer_library_duplication_exception = \u0412 \u0431\u0438\u0431\u0
 
 ProjectEditorDiffer_no_differences = \u0418\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u0439 \u043D\u0435 \u043D\u0430\u0439\u0434\u0435\u043D\u043E.
 
-ProjectEditorDiffer_project = \u041F\u0440\u043E\u0435\u043A\u0442
+ProjectEditorDiffer_project = \u043F\u0440\u043E\u0435\u043A\u0442\u0443
 
 ProjectEditorDiffer_script_creation_message = \u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C \u0444\u0430\u0439\u043B \u0441\u043A\u0440\u0438\u043F\u0442\u0430 \u043C\u0438\u0433\u0440\u0430\u0446\u0438\u0438 \u0432 \u043F\u0440\u043E\u0435\u043A\u0442\u0435?
 
@@ -828,7 +828,7 @@ delete = \u0423\u0434\u0430\u043B\u0438\u0442\u044C
 
 diffPresentationPane_getting_changes_for_diff = \u041F\u043E\u043B\u0443\u0447\u0435\u043D\u0438\u0435 \u0438\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u0439
 
-diffTableViewer_change_type = \u0422\u0438\u043F \u0438\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u044F \u0434\u043B\u044F {0}
+diffTableViewer_change_type = \u0422\u0438\u043F \u0438\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u044F
 
 diffTableViewer_container = \u041A\u043E\u043D\u0442\u0435\u0439\u043D\u0435\u0440
 
@@ -836,9 +836,9 @@ diffTableViewer_db_user = \u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442
 
 diffTableViewer_deselect_child_elements = \u0421\u043D\u044F\u0442\u044C \u0432\u044B\u0431\u043E\u0440 \u0441 \u0434\u043E\u0447\u0435\u0440\u043D\u0438\u0445 \u044D\u043B\u0435\u043C\u0435\u043D\u0442\u043E\u0432
 
-diffTableViewer_for_database = \u0431\u0430\u0437\u044B \u0434\u0430\u043D\u043D\u044B\u0445
+diffTableViewer_for_database = \ \u0434\u043B\u044F \u0411\u0414
 
-diffTableViewer_for_project = \u043F\u0440\u043E\u0435\u043A\u0442\u0430
+diffTableViewer_for_project = \ \u0434\u043B\u044F \u043F\u0440\u043E\u0435\u043A\u0442\u0430
 
 diffTableViewer_git_user = \u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C git
 
