--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -43,17 +43,17 @@ DbStoreEditorDialog_connection_properties = Connection properties
 
 DbStoreEditorDialog_dump_browse = Browse...
 
-DbStoreEditorDialog_dump_custom_parameters = dump custom parameters\n(available variables: {0} {1} {2} {3} {4}):
+DbStoreEditorDialog_dump_custom_parameters = Loader custom parameters\n(available variables: {0} {1} {2} {3} {4}):
 
-DbStoreEditorDialog_dump_executable = dump executable
+DbStoreEditorDialog_dump_executable = Loader executable
 
-DbStoreEditorDialog_dump_file_dialog_header = Select dump file
+DbStoreEditorDialog_dump_file_dialog_header = Select loader...
 
 DbStoreEditorDialog_dump_filter = All files
 
 DbStoreEditorDialog_dump_properties = External loader
 
-DbStoreEditorDialog_dump_switch = Use dump DB loader instead of JDBC
+DbStoreEditorDialog_dump_switch = Use external DB loader instead of JDBC
 
 DbStoreEditorDialog_failed_connection = Connection failed
 
@@ -617,6 +617,9 @@ QuickUpdate_updating_db = Updating DB
 
 QuickUpdate_updating_project = Updating Project
 
+ShowConsoleParticipant_remove=Remove Launch
+ShowConsoleParticipant_remove_all=Remove All Terminated Launches
+ShowConsoleParticipant_terminate=Terminate
 SQLEditorContentOutlinePage_hide_non_dangerous = Hide non-dangerous statements
 
 SQLEditorContentOutlinePage_sort_alphabetically = Sort alphabetically 
@@ -695,6 +698,7 @@ TreeDiffer_schema_load_error = Error while loading DB schema
 
 TreeDiffer_unknown_error = Unknown error while loading DB schema
 
+UiProgressReporter_warning=WARNING: 
 UpdateDdl_read_only_db_message = This database is read only. You can change this in database connection settings.
 
 UpdateDdl_read_only_db_title = Read only database
