added message in 'isEmpty'-check for renaming of ignoreObject

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -1022,4 +1022,6 @@ stdStreamRedirector_completed_with_code = {0} completed with return code {1}
 
 treeDiffer_building_diff_tree = Building diff tree...
 
+txtNameEditingSupport_cannot_add_empty = Cannot add empty item.
+
 warning_providing_password_here_is_insecure_use_pgpass_instead = Warning:\nProviding password here is insecure! \nConsider using .pgpass file instead.
