--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -821,6 +821,8 @@ dbStoreEditorDialog_db_info = DB Info
 
 dbStoreEditorDialog_db_store_editor = DB credentials
 
+dbStoreEditorDialog_empty_name = Cannot save entry with empty name.
+
 dbStoreEditorDialog_not_valid_port_number = Not valid port number: {0}
 
 dbUpdatePrefPage_Enter_cmd_to_update_ddl_with_sql_script = Migration command\n(available variables: 
