--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
@@ -822,6 +822,8 @@ dbStoreEditorDialog_db_info = \u0418\u043D\u0444\u043E\u0440\u043C\u0430\u0446\u
 
 dbStoreEditorDialog_db_store_editor = \u0414\u0430\u043D\u043D\u044B\u0435 \u043F\u043E\u0434\u043A\u043B\u044E\u0447\u0435\u043D\u0438\u044F \u043A \u0411\u0414
 
+dbStoreEditorDialog_empty_name = \u041D\u0435\u0432\u043E\u0437\u043C\u043E\u0436\u043D\u043E \u0441\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C \u0437\u0430\u043F\u0438\u0441\u044C \u0441 \u043F\u0443\u0441\u0442\u044B\u043C \u0438\u043C\u0435\u043D\u0435\u043C.
+
 dbStoreEditorDialog_not_valid_port_number = \u041D\u0435\u043F\u0440\u0430\u0432\u0438\u043B\u044C\u043D\u044B\u0439 \u043D\u043E\u043C\u0435\u0440 \u043F\u043E\u0440\u0442\u0430: {0} 
 
 dbUpdatePrefPage_Enter_cmd_to_update_ddl_with_sql_script = \u041A\u043E\u043C\u0430\u043D\u0434\u0430 \u043C\u0438\u0433\u0440\u0430\u0446\u0438\u0438\n(\u0434\u043E\u0441\u0442\u0443\u043F\u043D\u044B\u0435 \u043F\u0435\u0440\u0435\u043C\u0435\u043D\u043D\u044B\u0435: 
