--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -821,7 +821,7 @@ dbStoreEditorDialog_db_info = DB Info
 
 dbStoreEditorDialog_db_store_editor = DB credentials
 
-dbStoreEditorDialog_empty_name = Cannot save entry with empty name.
+dbStoreEditorDialog_empty_name = Please enter entry name.
 
 dbStoreEditorDialog_not_valid_port_number = Not valid port number: {0}
 
@@ -1024,6 +1024,6 @@ stdStreamRedirector_completed_with_code = {0} completed with return code {1}
 
 treeDiffer_building_diff_tree = Building diff tree...
 
-txtNameEditingSupport_cannot_add_empty = Cannot add empty item.
+txtNameEditingSupport_cannot_add_empty = Value cannot be empty.
 
 warning_providing_password_here_is_insecure_use_pgpass_instead = Warning:\nProviding password here is insecure! \nConsider using .pgpass file instead.
