--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -605,6 +605,10 @@ SQLEditorMainPage_matching_bracket_and_caret_location = Both brackets
 
 SQLEditorMainPage_matching_bracket_highlighting_color = Bracket highlight color
 
+SQLEditorSourceViewerConfiguration_ctrl_space_show_keywords = Press 'Ctrl+Space' to show KEYWORDS
+
+SQLEditorSourceViewerConfiguration_ctrl_space_show_templates = Press 'Ctrl+Space' to show SQL TEMPLATES
+
 SQLEditorStatementTypes_funcs = Function
 
 SQLEditorStatementTypes_multi_comments = Multi-line comments
