--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
@@ -606,6 +606,10 @@ SQLEditorMainPage_matching_bracket_and_caret_location = \u041E\u0431\u0435 \u044
 
 SQLEditorMainPage_matching_bracket_highlighting_color = \u0426\u0432\u0435\u0442 \u043F\u043E\u0434\u0441\u0432\u0435\u0442\u043A\u0438 \u0441\u043A\u043E\u0431\u043E\u043A
 
+SQLEditorSourceViewerConfiguration_ctrl_space_show_keywords = \u041D\u0430\u0436\u043C\u0438\u0442\u0435 'Ctrl+Space', \u0447\u0442\u043E\u0431\u044B \u043E\u0442\u043E\u0431\u0440\u0430\u0437\u0438\u0442\u044C \u041A\u041B\u042E\u0427\u0415\u0412\u042B\u0415 \u0421\u041B\u041E\u0412\u0410
+
+SQLEditorSourceViewerConfiguration_ctrl_space_show_templates = \u041D\u0430\u0436\u043C\u0438\u0442\u0435 'Ctrl+Space', \u0447\u0442\u043E\u0431\u044B \u043E\u0442\u043E\u0431\u0440\u0430\u0437\u0438\u0442\u044C \u0428\u0410\u0411\u041B\u041E\u041D\u042B SQL
+
 SQLEditorStatementTypes_funcs = \u0424\u0443\u043D\u043A\u0446\u0438\u0438
 
 SQLEditorStatementTypes_multi_comments = \u041C\u043D\u043E\u0433\u043E\u0441\u0442\u0440\u043E\u0447\u043D\u044B\u0435 \u043A\u043E\u043C\u043C\u0435\u043D\u0442\u0430\u0440\u0438\u0438
