--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -119,6 +119,8 @@ DependencyProperties_add_file = Add file
 
 DependencyProperties_add_uri = Add URL
 
+DependencyProperties_attention = Attention
+
 DependencyProperties_connection_start = Database connection string must start with 'jdbc:'
 
 DependencyProperties_empty_scheme = Empty scheme unsupported
@@ -127,7 +129,9 @@ DependencyProperties_enter_connection_string = Enter database connection string
 
 DependencyProperties_enter_uri = Enter URL
 
-DependencyProperties_ignore_privileges = Ignore privileges
+DependencyProperties_ignore_priv_warn = Ignoring privileges and owners will lead to the database setting the owners to its current user. Objects' privileges will also be defaulted using the current user.\nThis behaviour is usually undesirable. To avoid it you should save some "baseline" privileges and owners as overrides in the project. To do so, compare the project with a database where "baseline" privileges are available, and save the differences using the "override" option in the Project Update dialog.
+
+DependencyProperties_ignore_privileges = Ignore privileges/owners
 
 DependencyProperties_owner = Owner
 
