--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -551,6 +551,12 @@ ProjectEditorDiffer_library_duplication_exception = Object overrides are present
 
 ProjectEditorDiffer_no_differences = No changes found.
 
+ProjectEditorDiffer_override_cancel = Cancel
+
+ProjectEditorDiffer_override_objects = Override objects
+
+ProjectEditorDiffer_override_privileges = Override privileges
+
 ProjectEditorDiffer_project = project
 
 ProjectEditorDiffer_script_creation_message = Save migration script file in project?
