--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
@@ -550,6 +550,12 @@ ProjectEditorDiffer_library_duplication_exception = \u0412 \u0431\u0438\u0431\u0
 
 ProjectEditorDiffer_no_differences = \u0418\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u0439 \u043D\u0435 \u043D\u0430\u0439\u0434\u0435\u043D\u043E.
 
+ProjectEditorDiffer_override_cancel = \u041E\u0442\u043C\u0435\u043D\u0430
+
+ProjectEditorDiffer_override_objects = \u041F\u0435\u0440\u0435\u043E\u043F\u0440\u0435\u0434\u0435\u043B\u0438\u0442\u044C \u043E\u0431\u044A\u0435\u043A\u0442\u044B
+
+ProjectEditorDiffer_override_privileges = \u041F\u0435\u0440\u0435\u043E\u043F\u0440\u0435\u0434\u0435\u043B\u0438\u0442\u044C \u043F\u0440\u0438\u0432\u0438\u043B\u0435\u0433\u0438\u0438
+
 ProjectEditorDiffer_project = \u043F\u0440\u043E\u0435\u043A\u0442\u0443
 
 ProjectEditorDiffer_script_creation_message = \u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C \u0444\u0430\u0439\u043B \u0441\u043A\u0440\u0438\u043F\u0442\u0430 \u043C\u0438\u0433\u0440\u0430\u0446\u0438\u0438 \u0432 \u043F\u0440\u043E\u0435\u043A\u0442\u0435?
