corrected localization for ContentAssistant status message

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -605,9 +605,9 @@ SQLEditorMainPage_matching_bracket_and_caret_location = Both brackets
 
 SQLEditorMainPage_matching_bracket_highlighting_color = Bracket highlight color
 
-SQLEditorSourceViewerConfiguration_ctrl_space_show_keywords = Press 'Ctrl+Space' to show KEYWORDS
+SQLEditorSourceViewerConfiguration_show_keywords = Press "{0}" to show KEYWORDS
 
-SQLEditorSourceViewerConfiguration_ctrl_space_show_templates = Press 'Ctrl+Space' to show SQL TEMPLATES
+SQLEditorSourceViewerConfiguration_show_templates = Press "{0}" to show SQL TEMPLATES
 
 SQLEditorStatementTypes_funcs = Function
 
