added new DB connection property for MS (domain)
DbInfo, JdbcMsConnector, DbSource, DbStorePrefPage, PgPassDialog,
QuickUpdate, SQLEditor : added connection property 'domain'

DbStoreEditorDialog, Messages, messages, messages_ru_RU: added
connection property 'domain' to database connection editor dialog

DbXmlStore : added using of connection property 'domain' in xml storage

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
@@ -941,6 +941,8 @@ diffwizard_diffpage_target_warning = \u0426\u0435\u043B\u0435\u0432\u0430\u044F 
 
 diffwizard_pagepartial_description = \u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435 \u044D\u043B\u0435\u043C\u0435\u043D\u0442\u044B \u0434\u043B\u044F \u043E\u0431\u043D\u043E\u0432\u043B\u0435\u043D\u0438\u044F.
 
+domain = \u0414\u043E\u043C\u0435\u043D:
+
 e_mail = \u0412\u0430\u0448 e-mail:
 
 edit = \u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C
