--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -942,6 +942,8 @@ diffwizard_diffpage_target_warning = Target database schema is not selected!
 
 diffwizard_pagepartial_description = Select the items for updating.
 
+domain = Domain:
+
 e_mail = Your e-mail:
 
 edit = Edit
