added link to connection properties for MS

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -21,7 +21,11 @@ DbPropertyListEditor_field_name = Name:
 
 DbPropertyListEditor_field_value = Value:
 
+DbPropertyListEditor_ms_link_hint = (for MS SQL)
+
 DbPropertyListEditor_new_property = New property
+
+DbPropertyListEditor_pg_link_hint = (for PostgreSQL)
 
 DbPropertyListEditor_properties_hint = All properties can be viewed at:
 
