--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
@@ -22,7 +22,11 @@ DbPropertyListEditor_field_name = \u0418\u043C\u044F:
 
 DbPropertyListEditor_field_value = \u0417\u043D\u0430\u0447\u0435\u043D\u0438\u0435:
 
+DbPropertyListEditor_ms_link_hint = (\u0434\u043B\u044F MS SQL)
+
 DbPropertyListEditor_new_property = \u041D\u043E\u0432\u043E\u0435 \u0441\u0432\u043E\u0439\u0441\u0442\u0432\u043E
+
+DbPropertyListEditor_pg_link_hint = (\u0434\u043B\u044F PostgreSQL)
 
 DbPropertyListEditor_properties_hint = \u041F\u043E\u0441\u043C\u043E\u0442\u0440\u0435\u0442\u044C \u0432\u0441\u0435 \u0441\u0432\u043E\u0439\u0441\u0442\u0432\u0430 \u043C\u043E\u0436\u043D\u043E \u043F\u043E \u0430\u0434\u0440\u0435\u0441\u0443:
 
