--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -627,9 +627,9 @@ QuickUpdate_updating_db = Updating DB
 
 QuickUpdate_updating_project = Updating Project
 
-SQLEditorCompletionProcessor_show_keywords = Press "{0}" to show KEYWORDS
+SQLEditorCompletionProcessor_show_keywords = Press "{0}" to show Objects/Keywords
 
-SQLEditorCompletionProcessor_show_templates = Press "{0}" to show SQL TEMPLATES
+SQLEditorCompletionProcessor_show_templates = Press "{0}" to show SQL Templates
 
 SQLEditorContentOutlinePage_hide_non_dangerous = Hide non-dangerous statements
 
