--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -301,6 +301,8 @@ IgnoreListEditorDialog_save_ignore_file = Save ignored objects list
 
 IgnoreListProperties_create_new_file = Create new file
 
+IgnoreListProperties_edit_pgcodekeeperignore = Edit .pgcodekeeperignore
+
 IgnoredObjectPrefListEditor_already_present = Entry "{0}" is already present in the list with given parameters!
 
 IgnoredObjectPrefListEditor_contents = Apply to contents
