--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -300,6 +300,7 @@ IgnoreListEditorDialog_save = Save
 IgnoreListEditorDialog_save_ignore_file = Save ignored objects list
 
 IgnoreListProperties_create_new_file = Create new file
+IgnoreListProperties_default_ignore_tooltip=Project's default ignore list in .pgcodekeeperignore file
 
 IgnoreListProperties_edit_pgcodekeeperignore = Edit .pgcodekeeperignore
 
