added the basis for adding the ability to override global properties
DbSource, UIConsts : added the getting of project for use
'override'-property and used 'override'-property for 'ignore privileges'

OverridablePrefs : added the logic used for override the global
preferences by project preferences

ProjectProperties, Messages, messages, messages_ru_RU : added checkbox
for 'override'-property and checkbox for override the 'ignore
privileges' property

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -300,7 +300,8 @@ IgnoreListEditorDialog_save = Save
 IgnoreListEditorDialog_save_ignore_file = Save ignored objects list
 
 IgnoreListProperties_create_new_file = Create new file
-IgnoreListProperties_default_ignore_tooltip=Project's default ignore list in .pgcodekeeperignore file
+
+IgnoreListProperties_default_ignore_tooltip = Project's default ignore list in .pgcodekeeperignore file
 
 IgnoreListProperties_edit_pgcodekeeperignore = Edit .pgcodekeeperignore
 
@@ -597,6 +598,8 @@ ProjectProperties_binding_to_db_connection = Bind project to database connection
 ProjectProperties_change_projprefs_warn = Warning:\nChanging settings here WILL NOT convert the files' contents!
 
 ProjectProperties_disable_parser_in_external_files = Disable SQL parser for unrelated files opened in SQL Editor
+
+ProjectProperties_enable_proj_prefs = Enable project specific settings
 
 ProjectProperties_force_unix_newlines = Use Unix-style newline characters
 
