--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -607,6 +607,8 @@ ProjectProperties_force_unix_newlines_desc = Force Unix-style newline characters
 
 ProjectProperties_posix_is_used_warn = Warning:\nPostgreSQL treats UTC+XX timezone format using POSIX standard. \nIn the names of POSIX time zone names, positive offsets are used \nfor locations west of Greenwich.
 
+ProjectProperties_use_global_ignore_list = Use global ignore list
+
 ProjectUpdater_error_backup_restore = Error while restoring backups after update error! Please repair your project manually before continuing!
 
 ProjectUpdater_error_no_tempdir = Couldn''t create temp directory for project update! {0}
