--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -276,7 +276,8 @@ FilterDialog_title = Filters
 GeneralPrefPage_ignore_concurrent_modification = Ignore concurrent modification errors when reading DB
 
 GeneralPrefPage_reuse_open_compare_editor = Reuse compare editor instead of opening new ones
-GeneralPrefPage_simplify_view=Simplify views definitions from JDBC
+
+GeneralPrefPage_simplify_view = Use pretty-printed format of view when reading via JDBC (not recomended by PostgreSQL)
 
 GetChanges_select_source = Choose source
 
