--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -273,7 +273,7 @@ FilterDialog_sql_filter_placehodlder = Enter sql code
 
 FilterDialog_title = Filters
 
-GeneralPrefPage_enable_body_dependencies = Enable dependencies from bodies of functions and procedures
+GeneralPrefPage_enable_body_dependencies = Enable full dependencies from bodies of functions and procedures
 
 GeneralPrefPage_ignore_concurrent_modification = Ignore concurrent modification errors when reading DB
 
