--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -279,7 +279,7 @@ GeneralPrefPage_ignore_concurrent_modification = Ignore concurrent modification 
 
 GeneralPrefPage_reuse_open_compare_editor = Reuse compare editor instead of opening new ones
 
-GeneralPrefPage_simplify_view = Use pretty-printed format of view when reading via JDBC (not recomended by PostgreSQL)
+GeneralPrefPage_simplify_view = Simple formatting for VIEWs when reading via JDBC (not recomended by PostgreSQL)
 
 GetChanges_select_source = Choose source
 
