--- a/ru.taximaxim.codekeeper.ui/OSGI-INF/l10n/bundle.properties
+++ b/ru.taximaxim.codekeeper.ui/OSGI-INF/l10n/bundle.properties
@@ -22,6 +22,7 @@ command.commandname.GetSystemObjects = Create a snapshot of system objects
 command.commandname.OpenDbStore      = Open DB Store
 command.commandname.OpenDocs         = Open documentation
 command.commandname.OpenObjectWizard = Create PostrgeSQL object
+command.commandname.OpenSQLEditor    = New SQL editor
 command.commandname.QuickUpdate      = Quick update
 command.commandname.UpdateDdl        = Execute selection
 command.label.addBuilder             = Add Builder
