--- a/ru.taximaxim.codekeeper.ui/OSGI-INF/l10n/bundle_ru_RU.properties
+++ b/ru.taximaxim.codekeeper.ui/OSGI-INF/l10n/bundle_ru_RU.properties
@@ -22,6 +22,7 @@ command.commandname.GetSystemObjects = \u0421\u043E\u0437\u0434\u0430\u0442\u044
 command.commandname.OpenDbStore      = \u041E\u0442\u043A\u0440\u044B\u0442\u044C \u0445\u0440\u0430\u043D\u0438\u043B\u0438\u0449\u0435 \u0411\u0414
 command.commandname.OpenDocs         = \u041E\u0442\u043A\u0440\u044B\u0442\u044C \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430\u0446\u0438\u044E
 command.commandname.OpenObjectWizard = \u0421\u043E\u0437\u0434\u0430\u0442\u044C \u043E\u0431\u044A\u0435\u043A\u0442 PostrgeSQL
+command.commandname.OpenSQLEditor    = \u041D\u043E\u0432\u044B\u0439 SQL \u0440\u0435\u0434\u0430\u043A\u0442\u043E\u0440
 command.commandname.QuickUpdate      = \u0411\u044B\u0441\u0442\u0440\u043E\u0435 \u043E\u0431\u043D\u043E\u0432\u043B\u0435\u043D\u0438\u0435
 command.commandname.UpdateDdl        = \u0412\u044B\u043F\u043E\u043B\u043D\u0438\u0442\u044C \u0432\u044B\u0431\u0440\u0430\u043D\u043D\u043E\u0435
 command.label.addBuilder             = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u0441\u0431\u043E\u0440\u0449\u0438\u043A
