--- a/ru.taximaxim.codekeeper.ui/OSGI-INF/l10n/bundle.properties
+++ b/ru.taximaxim.codekeeper.ui/OSGI-INF/l10n/bundle.properties
@@ -97,3 +97,4 @@ wizard.name.keeperNewMsWizard  = pgCodeKeeper MS SQL Project
 wizard.name.keeperNewWizard    = pgCodeKeeper Project
 wizard.name.mockDataWizard     = Generate mock data
 wizard.name.newPgSqlObject     = SQL Object
+wizard.name.newSQLEditorWizard = Untitled SQL Editor
