--- a/ru.taximaxim.codekeeper.ui/OSGI-INF/l10n/bundle_ru_RU.properties
+++ b/ru.taximaxim.codekeeper.ui/OSGI-INF/l10n/bundle_ru_RU.properties
@@ -97,4 +97,4 @@ wizard.name.keeperNewMsWizard  = MS SQL \u043F\u0440\u043E\u0435\u043A\u0442 pgC
 wizard.name.keeperNewWizard    = \u041F\u0440\u043E\u0435\u043A\u0442 pgCodeKeeper
 wizard.name.mockDataWizard     = \u0421\u0444\u043E\u0440\u043C\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u0442\u0435\u0441\u0442\u043E\u0432\u044B\u0435 \u0434\u0430\u043D\u043D\u044B\u0435
 wizard.name.newPgSqlObject     = \u041E\u0431\u044A\u0435\u043A\u0442 SQL
-wizard.name.newSQLEditorWizard = SQL \u0440\u0435\u0434\u0430\u043A\u0442\u043E\u0440 \u0431\u0435\u0437 \u043D\u0430\u0437\u0432\u0430\u043D\u0438\u044F
+wizard.name.newSQLEditorWizard = SQL \u0440\u0435\u0434\u0430\u043A\u0442\u043E\u0440 \u0431\u0435\u0437 \u0438\u043C\u0435\u043D\u0438
