added java version to report

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -763,6 +763,7 @@ UsageReportPreferencePage_Events = Events:
 
 UsageReportPreferencePage_FirstUsageHit = First usage reported on: 
 
+UsageReportPreferencePage_JavaVersion=Java version: 
 UsageReportPreferencePage_JvmName = JVM name: 
 
 UsageReportPreferencePage_LastUsageHit = Last usage reported on: 
