--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
@@ -764,6 +764,8 @@ UsageReportPreferencePage_Events = \u0421\u043E\u0431\u044B\u0442\u0438\u044F:
 
 UsageReportPreferencePage_FirstUsageHit = \u041F\u0435\u0440\u0432\u044B\u0439 \u043E\u0442\u0447\u0435\u0442: 
 
+UsageReportPreferencePage_JavaVersion = \u0412\u0435\u0440\u0441\u0438\u044F Java: 
+
 UsageReportPreferencePage_JvmName = \u041D\u0430\u0437\u0432\u0430\u043D\u0438\u0435 JVM: 
 
 UsageReportPreferencePage_LastUsageHit = \u041F\u043E\u0441\u043B\u0435\u0434\u043D\u0438\u0439 \u043E\u0442\u0447\u0435\u0442: 
