replaced [GetChanges] button on diff panel by button with drop-down menu

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
@@ -188,6 +188,8 @@ DiffTableViewer_filter_placeholder = \u0418\u043C\u044F \u043E\u0431\u044A\u0435
 
 DiffTableViewer_get_changes = \u041F\u043E\u043B\u0443\u0447\u0438\u0442\u044C \u0438\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u044F
 
+DiffTableViewer_get_changes_custom = \u041F\u043E\u043B\u0443\u0447\u0438\u0442\u044C \u0438\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u044F \u0441 \u043F\u0440\u0435\u0434\u0443\u0441\u0442\u0430\u043D\u043E\u0432\u043A\u0430\u043C\u0438
+
 DiffTableViewer_library = \u0411\u0438\u0431\u043B\u0438\u043E\u0442\u0435\u043A\u0430: 
 
 DiffTableViewer_path = \u041F\u0443\u0442\u044C: 
