--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -187,6 +187,8 @@ DiffTableViewer_filter_placeholder = Object Name
 
 DiffTableViewer_get_changes = Get changes
 
+DiffTableViewer_get_changes_custom = Get changes with presets
+
 DiffTableViewer_library = Library: 
 
 DiffTableViewer_path = Path: 
