added logic for one-time run [GetChanges] with custom preferences

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -986,6 +986,10 @@ generalPrefPage_show_console_when_program_write_to_console = Show console on new
 
 generalPrefPage_use_depcy_on_commit_page = Consider object dependencies when updating project
 
+getChangesCustomDialog_custom_prefs_description = These parameters will be changed only for the current operation \u201CGet Changes\u201D, after which the parameter values \u200B\u200Bwill return to their original state.
+
+getChangesCustomDialog_run_with_specified_prefs = Run with the specified preferences
+
 ignoredObjectPrefListEditor_ignore_contents = Apply to contents
 
 ignoredObjectPrefListEditor_name = Text
