replaced [Apply] button on diff panel by button with drop-down menu

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -169,6 +169,8 @@ DiffPresentationPane_zip_file_filter = ZIP files
 
 DiffTableViewer_apply_to = Apply
 
+DiffTableViewer_apply_to_custom = Apply with presets
+
 DiffTableViewer_collapse_all = Collapse All
 
 DiffTableViewer_copy_as_regex = Copy Checked Elements as Filter Regex
