--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
@@ -170,6 +170,8 @@ DiffPresentationPane_zip_file_filter = \u0424\u0430\u0439\u043B\u044B ZIP
 
 DiffTableViewer_apply_to = \u041F\u0440\u0438\u043C\u0435\u043D\u0438\u0442\u044C
 
+DiffTableViewer_apply_to_custom = \u041F\u0440\u0438\u043C\u0435\u043D\u0438\u0442\u044C \u0441 \u043F\u0440\u0435\u0434\u0443\u0441\u0442\u0430\u043D\u043E\u0432\u043A\u0430\u043C\u0438
+
 DiffTableViewer_collapse_all = \u0421\u0432\u0435\u0440\u043D\u0443\u0442\u044C \u0432\u0441\u0435
 
 DiffTableViewer_copy_as_regex = \u041A\u043E\u043F\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u0432\u044B\u0431\u0440\u0430\u043D\u043D\u044B\u0435 \u044D\u043B\u0435\u043C\u0435\u043D\u0442\u044B \u043A\u0430\u043A Regex \u0444\u0438\u043B\u044C\u0442\u0440
