added logic for one-time run [Apply] with custom preferences
GetChangesCustomDialog : corrected informational label;
ApplyCustomDialog : added dialog with settings for [Apply];
ProjectEditorDiffer, Messages, messages, messages_ru_RU : added logic
for one-time run [Apply]

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -988,7 +988,7 @@ generalPrefPage_show_console_when_program_write_to_console = Show console on new
 
 generalPrefPage_use_depcy_on_commit_page = Consider object dependencies when updating project
 
-getChangesCustomDialog_custom_prefs_description = These parameters will be changed only for the current operation \u201CGet Changes\u201D, after which the parameter values \u200B\u200Bwill return to their original state.
+getChangesCustomDialog_custom_prefs_description = These parameters will be changed only for the current operation \u201C{0}\u201D,\nafter which the parameter values \u200B\u200Bwill return to their original state.
 
 getChangesCustomDialog_run_with_specified_prefs = Run with the specified preferences
 
@@ -1033,6 +1033,10 @@ prespective_change_status_ask = Ask every time
 prespective_change_status_never = Never change
 
 projectEditorDiffer_save_project = Updating project...
+
+projectEditorDiffer_works_only_for_db = Applying with presets works only for database.
+
+projectEditorDiffer_works_only_for_db_title = Cannot be applied to the project!
 
 projectProperties_error_occurs_while_saving_properties = Error occurs while saving properties: {0}
 
