added logic to call formatting command

--- a/ru.taximaxim.codekeeper.ui/OSGI-INF/l10n/bundle.properties
+++ b/ru.taximaxim.codekeeper.ui/OSGI-INF/l10n/bundle.properties
@@ -17,6 +17,7 @@ command.commandname.CommitProject    = Apply to project
 command.commandname.ConvertProject   = Convert to pgCodeKeeper project
 command.commandname.Diff             = Diff
 command.commandname.DiffProject      = Apply to DB
+command.commandname.Format           = Format
 command.commandname.GetChanges       = Get changes
 command.commandname.GetSystemObjects = Create a snapshot of system objects
 command.commandname.OpenDbStore      = Open DB Store
