added formatter algorithm

--- a/ru.taximaxim.codekeeper.ui/OSGI-INF/l10n/bundle.properties
+++ b/ru.taximaxim.codekeeper.ui/OSGI-INF/l10n/bundle.properties
@@ -81,6 +81,7 @@ page.name.libraryDependencies = Library dependencies
 page.name.pgProjectEditor     = Project Editor
 page.name.sqlEditor           = SQL Editor
 page.name.sqlEditorColors     = Syntax Coloring
+page.name.sqlEditorFormatter  = Formatter
 page.name.sqlEditorTemplates  = SQL Editor Templates
 page.name.usageReport         = Usage Reporting
 
