--- a/ru.taximaxim.codekeeper.ui/OSGI-INF/l10n/bundle_ru_RU.properties
+++ b/ru.taximaxim.codekeeper.ui/OSGI-INF/l10n/bundle_ru_RU.properties
@@ -81,6 +81,7 @@ page.name.libraryDependencies = \u0411\u0438\u0431\u043B\u0438\u043E\u0442\u0435
 page.name.pgProjectEditor     = \u0420\u0435\u0434\u0430\u043A\u0442\u043E\u0440 \u043F\u0440\u043E\u0435\u043A\u0442\u0430
 page.name.sqlEditor           = \u0420\u0435\u0434\u0430\u043A\u0442\u043E\u0440 SQL
 page.name.sqlEditorColors     = \u041F\u043E\u0434\u0441\u0432\u0435\u0442\u043A\u0430 \u0441\u0438\u043D\u0442\u0430\u043A\u0441\u0438\u0441\u0430
+page.name.sqlEditorFormatter  = \u0424\u043E\u0440\u043C\u0430\u0442\u0438\u0440\u043E\u0432\u0430\u043D\u0438\u0435
 page.name.sqlEditorTemplates  = \u0428\u0430\u0431\u043B\u043E\u043D\u044B \u0440\u0435\u0434\u0430\u043A\u0442\u043E\u0440\u0430 SQL
 page.name.usageReport         = \u041E\u0442\u0447\u0435\u0442\u044B \u043E\u0431 \u0438\u0441\u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u043D\u0438\u0438
 
