added formating for indents

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -652,11 +652,18 @@ SQLEditorCompletionProcessor_show_templates = Press "{0}" to show SQL Templates
 SQLEditorContentOutlinePage_hide_non_dangerous = Hide non-dangerous statements
 
 SQLEditorContentOutlinePage_sort_alphabetically = Sort alphabetically 
-SQLEditorFormatterPrefPage_add_whitespace_after_operators=Add whitespace after operators
-SQLEditorFormatterPrefPage_add_whitespace_before_operators=Add whitespace before operators
-SQLEditorFormatterPrefPage_remove_trailing_whitespace=Remove trailing whitespace
-SQLEditorFormatterPrefPage_replace_tab_with_whitespaces=Replace tab with whitespaces
-SQLEditorFormatterPrefPage_whitespace_count=Whitespace count
+
+SQLEditorFormatterPrefPage_add_whitespace_after_operators = Add whitespace after operators
+
+SQLEditorFormatterPrefPage_add_whitespace_before_operators = Add whitespace before operators
+
+SQLEditorFormatterPrefPage_indent_size = Indent size
+
+SQLEditorFormatterPrefPage_remove_trailing_whitespace = Remove trailing whitespace
+
+SQLEditorFormatterPrefPage_replace_tab_with_whitespaces = Replace tab with whitespaces
+
+SQLEditorFormatterPrefPage_whitespace_count = Whitespace count
 
 SQLEditorMainPage_bracket_highlighting = Bracket highlighting
 
