fixed password reading, removed unnecessary extension, added info label
DbXmlStore : fixed DbPass reading from file;
plugin.xml : removed unnecessary extension;
DbStoreEditorDialog, Messages, messages, messages_ru_RU : added info
label for password field.

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -1018,6 +1018,8 @@ newProjWizard_new_pg_db_project = New pgCodeKeeper project
 
 pgDumper_bad_pg_dump_version_output = Bad pg_dump --version output: {0}
 
+pgpass_passwords_supported = .pgpass passwords are supported
+
 please_check_at_least_one_row = Check at least one row.
 
 prespective_change_status_always = Always change
