--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
@@ -1019,6 +1019,8 @@ newProjWizard_new_pg_db_project = \u041D\u043E\u0432\u044B\u0439 \u043F\u0440\u0
 
 pgDumper_bad_pg_dump_version_output = \u041D\u0435\u0432\u0435\u0440\u043D\u044B\u0439 \u0432\u044B\u0432\u043E\u0434 pg_dump --version: {0}
 
+pgpass_passwords_supported = \u043F\u043E\u0434\u0434\u0435\u0440\u0436\u0438\u0432\u0430\u044E\u0442\u0441\u044F \u043F\u0430\u0440\u043E\u043B\u0438 \u0438\u0437 .pgpass
+
 please_check_at_least_one_row = \u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435 \u0445\u043E\u0442\u044F \u0431\u044B \u043E\u0434\u043D\u0443 \u0441\u0442\u0440\u043E\u043A\u0443.
 
 prespective_change_status_always = \u041C\u0435\u043D\u044F\u0442\u044C \u0432\u0441\u0435\u0433\u0434\u0430
