moved action buttons and switch 'Project/DB' to the ToolBarManager

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -167,7 +167,7 @@ DiffPresentationPane_sql_file_filter = SQL files
 
 DiffPresentationPane_zip_file_filter = ZIP files
 
-DiffTableViewer_apply_to = Apply
+DiffTableViewer_apply_to = Apply to
 
 DiffTableViewer_apply_to_custom = Apply with presets
 
@@ -207,7 +207,7 @@ DiffTableViewer_show_filters = Show filters...
 
 DiffTableViewer_to_database = DB
 
-DiffTableViewer_to_project = To project
+DiffTableViewer_to_project = Project
 
 DiffTableViewer_type = Type: 
 
