--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
@@ -168,7 +168,7 @@ DiffPresentationPane_sql_file_filter = \u0424\u0430\u0439\u043B\u044B SQL
 
 DiffPresentationPane_zip_file_filter = \u0424\u0430\u0439\u043B\u044B ZIP
 
-DiffTableViewer_apply_to = \u041F\u0440\u0438\u043C\u0435\u043D\u0438\u0442\u044C
+DiffTableViewer_apply_to = \u041F\u0440\u0438\u043C\u0435\u043D\u0438\u0442\u044C \u043A
 
 DiffTableViewer_apply_to_custom = \u041F\u0440\u0438\u043C\u0435\u043D\u0438\u0442\u044C \u0441 \u043F\u0440\u0435\u0434\u0443\u0441\u0442\u0430\u043D\u043E\u0432\u043A\u0430\u043C\u0438
 
@@ -208,7 +208,7 @@ DiffTableViewer_show_filters = \u041F\u043E\u043A\u0430\u0437\u0430\u0442\u044C 
 
 DiffTableViewer_to_database = \u0411\u0414
 
-DiffTableViewer_to_project = \u041A \u043F\u0440\u043E\u0435\u043A\u0442\u0443
+DiffTableViewer_to_project = \u041F\u0440\u043E\u0435\u043A\u0442\u0443
 
 DiffTableViewer_type = \u0422\u0438\u043F: 
 
