--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -875,7 +875,7 @@ dbUpdatePrefPage_create_script_project_directory = Create migration script files
 
 dbUpdatePrefPage_ignore_privileges = Ignore privileges and owners of database objects
 
-dbUpdatePrefPage_script_add_transaction = Surround migration script with START TRANSACTION; ... COMMIT TRANSACTION;
+dbUpdatePrefPage_script_add_transaction = Wrap migration script with START TRANSACTION; ... COMMIT TRANSACTION;
 
 dbUpdatePrefPage_script_deleting_status = Delete migration script files when closing migration editor
 
@@ -994,9 +994,9 @@ generalPrefPage_show_console_when_program_write_to_console = Show console on new
 
 generalPrefPage_use_depcy_on_commit_page = Consider object dependencies when updating project
 
-getChangesCustomDialog_custom_prefs_description = These parameters will be changed only for the current operation \u201C{0}\u201D,\nafter which the parameter values \u200B\u200Bwill return to their original state.
+getChangesCustomDialog_custom_prefs_description = Customize parameters of the current "{0}" operation.\nProgram and project settings will remain unaffected.
 
-getChangesCustomDialog_run_with_specified_prefs = Run with the specified preferences
+getChangesCustomDialog_run_with_specified_prefs = Run with specified parameters
 
 ignoredObjectPrefListEditor_ignore_contents = Apply to contents
 
