--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -169,7 +169,7 @@ DiffPresentationPane_zip_file_filter = ZIP files
 
 DiffTableViewer_apply_to = Apply to
 
-DiffTableViewer_apply_to_custom = Apply with presets
+DiffTableViewer_apply_to_custom = Apply with presets...
 
 DiffTableViewer_collapse_all = Collapse All
 
@@ -189,7 +189,7 @@ DiffTableViewer_filter_placeholder = Object Name
 
 DiffTableViewer_get_changes = Get changes
 
-DiffTableViewer_get_changes_custom = Get changes with presets
+DiffTableViewer_get_changes_custom = Get changes with presets...
 
 DiffTableViewer_library = Library: 
 
