--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
@@ -170,7 +170,7 @@ DiffPresentationPane_zip_file_filter = \u0424\u0430\u0439\u043B\u044B ZIP
 
 DiffTableViewer_apply_to = \u041F\u0440\u0438\u043C\u0435\u043D\u0438\u0442\u044C \u043A
 
-DiffTableViewer_apply_to_custom = \u041F\u0440\u0438\u043C\u0435\u043D\u0438\u0442\u044C \u0441 \u043F\u0440\u0435\u0434\u0443\u0441\u0442\u0430\u043D\u043E\u0432\u043A\u0430\u043C\u0438
+DiffTableViewer_apply_to_custom = \u041F\u0440\u0438\u043C\u0435\u043D\u0438\u0442\u044C \u0441 \u043F\u0440\u0435\u0434\u0443\u0441\u0442\u0430\u043D\u043E\u0432\u043A\u0430\u043C\u0438...
 
 DiffTableViewer_collapse_all = \u0421\u0432\u0435\u0440\u043D\u0443\u0442\u044C \u0432\u0441\u0435
 
@@ -190,7 +190,7 @@ DiffTableViewer_filter_placeholder = \u0418\u043C\u044F \u043E\u0431\u044A\u0435
 
 DiffTableViewer_get_changes = \u041F\u043E\u043B\u0443\u0447\u0438\u0442\u044C \u0438\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u044F
 
-DiffTableViewer_get_changes_custom = \u041F\u043E\u043B\u0443\u0447\u0438\u0442\u044C \u0438\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u044F \u0441 \u043F\u0440\u0435\u0434\u0443\u0441\u0442\u0430\u043D\u043E\u0432\u043A\u0430\u043C\u0438
+DiffTableViewer_get_changes_custom = \u041F\u043E\u043B\u0443\u0447\u0438\u0442\u044C \u0438\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u044F \u0441 \u043F\u0440\u0435\u0434\u0443\u0441\u0442\u0430\u043D\u043E\u0432\u043A\u0430\u043C\u0438...
 
 DiffTableViewer_library = \u0411\u0438\u0431\u043B\u0438\u043E\u0442\u0435\u043A\u0430: 
 
