added logic to run heap size check every time pgCodeKeeper starts
UIConsts, PreferenceInitializer, GeneralPrefPage : added new preference
'heap size warning';
HeapSizeChecker, HeapSizeCheckerDialog, plugin : added Dialogs to change
heap size;
Messages, messages, messages_ru_RU : added localization for new
preference and Dialogs

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -285,6 +285,8 @@ FilterDialog_sql_filter_placehodlder = Enter sql code
 
 FilterDialog_title = Filters
 
+GeneralPrefPage_alert_if_heap_size_less_then_necessary = Alert if heap size less then necessary
+
 GeneralPrefPage_body_depcy_tooltip = Enables dependency tracking from function bodies to other functions.\nMay lead to generation of broken migration scripts.
 
 GeneralPrefPage_clean_parser_cache = Clear parser cache
@@ -310,6 +312,16 @@ GetSystemObjects_save_success_message = Snapshot was successfully created
 GetSystemObjects_save_success_title = Snapshot created!
 
 GitUserReader_error_reading_local_changes = Error reading local changes
+
+HeapSizeCheckerDialog_new_heap_size = New heap size
+
+HeapSizeCheckerDialog_set_heap_size = Set heap size
+
+HeapSizeChecker_do_not_ask_again = Do not ask again.
+
+HeapSizeChecker_heap_size_warning = The heap size has less memory than is necessary for pgCodeKeeper work.\nRecommended size for pgCodeKeeper work is {0} Gb.\nWould you like to change it?
+
+HeapSizeChecker_heap_size_warning_title = Small heap size
 
 IgnoreListEditorDialog_cancel = Cancel
 
