added logic for checking and overwriting the Xmx heap parameter

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -313,13 +313,17 @@ GetSystemObjects_save_success_title = Snapshot created!
 
 GitUserReader_error_reading_local_changes = Error reading local changes
 
+HeapSizeCheckerDialog_heap_size_updated = Heap size updated
+
 HeapSizeCheckerDialog_new_heap_size = New heap size
+
+HeapSizeCheckerDialog_restart_offer = You will need to restart Eclipse for the changes to take effect. \nWould you like to restart now?
 
 HeapSizeCheckerDialog_set_heap_size = Set heap size
 
 HeapSizeChecker_do_not_ask_again = Do not ask again.
 
-HeapSizeChecker_heap_size_warning = The heap size has less memory than is necessary for pgCodeKeeper work.\nRecommended size for pgCodeKeeper work is {0} Gb.\nWould you like to change it?
+HeapSizeChecker_heap_size_warning = The heap size has less memory than necessary. For large projects (with more than 1000 objects) the recommended size for pgCodeKeeper work is {0} GB. \nWould you like to change it now?
 
 HeapSizeChecker_heap_size_warning_title = Small heap size
 
